# rust-cli-scaffolding

./: Cargo.toml
lib_aws/: Cargo.toml
lib_aws/src/: account.rs  acm.rs  autoscaling.rs  cargo_lambda.rs  cloudformation.rs  cognito.rs  ecr.rs  ecs.rs  iam.rs  identity.rs  lib.rs  logs.rs  route53.rs  route53domains.rs  s3.rs  sam.rs  secrets.rs  ses.rs  shared_config.rs  ssm.rs
lib_core/: Cargo.toml
lib_core/src/: cli_error.rs  constants.rs  lib.rs  printer.rs  tty.rs
lib_core/src/common_entities/: deployment_color.rs  deployment_env.rs  mod.rs
lib_core/src/config/: mod.rs  parameterized_string.rs
lib_core/src/files/: encryption.rs  management.rs  mod.rs  placeholders.rs  tar.rs  temporary.rs
lib_core/src/general/: hash.rs  mod.rs  mount.rs
lib_core/src/processing/: json.rs
lib_core/src/tty/: executor.rs  mod.rs  printer.rs  tty.rs  user_preferences.rs
lib_core/src/user_input/: basic.rs  mod.rs  select.rs  vim.rs
lib_docker/: Cargo.toml
lib_docker/src/: build.rs  lib.rs  push.rs
lib_flutter/: Cargo.toml
lib_flutter/src/: android.rs  flutter.rs  lib.rs
lib_git/: Cargo.toml
lib_git/src/: lib.rs  ls_files.rs
lib_image/: Cargo.toml
lib_image/src/: common.rs  entities.rs  errors.rs  lib.rs  resize.rs  screenshots.rs
lib_networking/: Cargo.toml
lib_networking/src/: dns.rs  lib.rs  public_ip.rs  scp.rs  socket.rs  ssh.rs
main/: Cargo.toml
main/src/: lib.rs
