[package]
name = "lib_aws"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "^1.5.9"
aws-sdk-acm = "^1.84.0"
aws-sdk-autoscaling = "^1.57.0"
aws-sdk-cloudformation = "^1.54.0"
aws-sdk-cloudwatchlogs = "^1.87.0"
aws-sdk-cognitoidentityprovider = "^1.57.0"
aws-sdk-ecr = "^1.52.0"
aws-sdk-ecs = "^1.56.0"
aws-sdk-iam = "^1.61.0"
aws-sdk-route53 = "^1.65.0"
aws-sdk-route53domains = "^1.62.0"
aws-sdk-s3 = "^1.60.0"
aws-sdk-secretsmanager = "^1.52.0"
aws-sdk-ses = "^1.51.0"
aws-sdk-ssm = "^1.55.0"
aws-sdk-sts = "^1.48.0"
aws-smithy-runtime-api = "^1.7.3"
base64 = "^0.22.1"
chrono = "^0.4.38"
hex = "^0.4.3"
futures-util = "^0.3.31"
lib_core = { path = "../lib_core" }
regex = "^1.10.6"
serde = "^1.0.214"
serde_json = "^1.0.132"
sha2 = "^0.10.8"
tempfile = "^3.14.0"
textwrap = "^0.16.1"
walkdir = "^2.5.0"
futures = "0.3.32"
