[package]
name = "lib_core"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
colored = "2.1.0"
fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.git" }
rand = "0.8.5"
rand_core = "0.6.4"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
tempfile = "3.14.0"
uuid = { version = "1.11.0", features = ["v4"] }
