[package]
name = "lib_core"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "^0.10.3"
argon2 = "^0.5.3"
clap = { version = "^4.5.20", features = ["derive"] }
colored = "^2.1.0"
flate2 = "^1.0.35"
fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.git" }
inquire = "^0.7.5"
rand = "^0.8.5"
rand_core = "^0.6.4"
regex = "^1.11.1"
serde = { version = "^1.0.214", features = ["derive"] }
serde_json = "^1.0.132"
serde_yaml = "^0.9.34"
sha2 = "^0.10.8"
strum = "^0.26.3"
strum_macros = "^0.26.4"
tar = "^0.4.43"
tempfile = "^3.14.0"
textwrap = "0.16.1"
uuid = { version = "^1.11.0", features = ["v4"] }
