[package]
name = "lib_core"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "^0.11.0"
argon2 = "^0.5.3"
clap = { version = "^4.5.20", features = ["derive"] }
colored = "^3.1.1"
flate2 = "^1.0.35"
fractic-core = { git = "https://github.com/fractic-io/rust-core.git" }
fractic-server-error = { git = "https://github.com/fractic-io/rust-server-error.git" }
fs_extra = "^1.3.0"
inquire = "^0.9.4"
notify-rust = "^4.11.7"
rand = "^0.10.2"
rand_core = "^0.10.1"
regex = "^1.11.1"
serde = { version = "^1.0.214", features = ["derive"] }
serde_json = "^1.0.132"
serde_yaml = "^0.9.34"
sha2 = "^0.11.0"
strum = "^0.28.0"
strum_macros = "^0.28.0"
tar = "^0.4.43"
tempfile = "^3.14.0"
textwrap = "^0.16.1"
tokio = { version = "^1.42.0", features = ["macros", "signal", "io-std", "io-util", "time", "process"] }
uuid = { version = "^1.11.0", features = ["v4"] }
