[package]
name = "lib_networking"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "^0.4.42"
futures-util = "^0.3.31"
hickory-client = { version = "^0.24.1", default-features = false }
lib_core = { path = "../lib_core" }
netstat2 = "^0.11.0"
nix = { version = "^0.30.1", features = ["user"] }
openssh = "^0.11.3"
reqwest = "^0.12.9"
tokio = { version = "^1.41.1", default-features = false, features = ["net", "io-std", "fs"] }
walkdir = "^2.5.0"
