[package]
name = "fractic-cli-scaffolding"
version = "0.1.0"
authors = ["Mart van Buren <mart@fractic.io>"]
edition = "2021"

[dependencies]
lib_aws = { path = "../lib_aws", optional = true }
lib_core = { path = "../lib_core" }
lib_docker = { path = "../lib_docker", optional = true }
lib_flutter = { path = "../lib_flutter", optional = true }
lib_git = { path = "../lib_git", optional = true }
lib_image = { path = "../lib_image", optional = true }

[features]
default = []
aws = ["lib_aws"]
docker = ["lib_docker"]
flutter = ["lib_flutter"]
git = ["lib_git"]
image = ["lib_image"]